Probably fixed all of github actions